fix: add missing env to schedule Send Xmas Email workflow

--- a/.github/workflows/schedule-email.yml
+++ b/.github/workflows/schedule-email.yml
@@ -26,3 +26,5 @@ jobs:
         env:
           RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
           XMAS_IMAGE_URL: ${{ secrets.XMAS_IMAGE_URL }}
+          RESEND_FROM_EMAIL: ${{ secrets.RESEND_FROM_EMAIL }}
+          RECIPIENT_EMAILS: ${{ secrets.RECIPIENT_EMAILS }}
